tests/ui/inference/issue-70082.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-70082.rs:7:33
   |
LL |     let y: f64 = 0.01f64 * 1i16.into();
   |                          -      ^^^^
   |                          |
   |                          type must be known at this point
   |
   = note: cannot satisfy `<f64 as Mul<_>>::Output == f64`
help: try using a fully qualified path to specify the expected types
   |
LL -     let y: f64 = 0.01f64 * 1i16.into();
LL +     let y: f64 = 0.01f64 * <i16 as Into<T>>::into(1i16);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
